--- a/package.json
+++ b/package.json
@@ -9,21 +9,30 @@
     "postinstall": "remix setup node"
   },
   "dependencies": {
+    "@prisma/client": "^3.9.2",
     "@remix-run/react": "^1.1.3",
+    "@remix-run/serve": "^1.1.3",
+    "@remix-run/vercel": "^1.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remix": "^1.1.3",
-    "@remix-run/serve": "^1.1.3",
-    "@remix-run/vercel": "^1.1.3"
+    "react-lazy-load-image-component": "^1.5.1",
+    "remix": "^1.1.3"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.1.3",
+    "@types/node": "^17.0.17",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
-    "typescript": "^4.1.2"
+    "esbuild-register": "^3.3.2",
+    "prisma": "^3.9.2",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5"
   },
   "engines": {
     "node": ">=14"
+  },
+  "prisma": {
+    "seed": "node --loader ts-node/esm prisma/seed.ts"
   },
   "sideEffects": false
 }
